--- a/src/css/preViewBigImg.css
+++ b/src/css/preViewBigImg.css
@@ -11,6 +11,7 @@ body{
     min-height: 200px;
     background-color: #fff;
     margin-bottom: 25px;
+    margin-left: 45px;
 }
 .con-item h2{
     height: 40px;
