--- a/src/css/preViewBigImg.css
+++ b/src/css/preViewBigImg.css
@@ -55,11 +55,11 @@ body{
 }
 .pre-close-btn{
     position: absolute;
-    right: 50px;
-    top: 50px;
-    background-color: #eee;
-    border:1px solid #333;
+    right: 2%;
+    top: 8%;
+    background-color: #fff;
     text-align: center;
+    color: #757575;
     width: 50px;
     height: 50px;
     line-height: 50px;
@@ -68,7 +68,8 @@ body{
     transition: all .3s;
 }
 .pre-close-btn:hover{
-    background-color: #ccc;
+    background-color: #c33;
+    color: #fff;
 }
 .pre-btn{
     position: absolute;
@@ -98,4 +99,15 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
 
+}
+@media screen and (max-width: 1080px) {
+    .pre-view-con img{
+        width: 95%;
+    }
+    .pre-close-btn{
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        right: 5%;
+    }
 }
