--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,41 +1,1 @@
-/* CSS Document */
-
-body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,
-legend,figure,button,input,textarea,th,td{
-    margin:0;
-    padding:0;
-}
-h1,h2,h3,h4,h5,h6,article{
-    font-size:100%;
-    font-weight:normal;
-    margin:0;
-    padding:0;
-}
-ul,ol{
-    list-style:none;
-}
-a{
-    text-decoration:none;
-}
-a:hover{
-    text-decoration: none;
-}
-input, button, select, textarea {
-    outline:none;
-    font-size:100%;
-    font-family:inherit;
-}
-textarea{
-    resize:none;
-}
-fieldset, img { border:0; }
-body{
-    font-size: 14px;
-    font-family: "Microsoft YaHei";
-}
-.clearfix:after{
-    content: '';
-    display: block;
-    visibility: hidden;
-    clear: both;
-}
+blockquote,body,button,dd,dl,dt,fieldset,figure,form,h1,h2,h3,h4,h5,h6,hr,input,legend,li,ol,p,pre,td,textarea,th,ul{margin:0;padding:0}article,h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:400;margin:0;padding:0}ol,ul{list-style:none}a,a:hover{text-decoration:none}button,input,select,textarea{outline:0;font-size:100%;font-family:inherit}textarea{resize:none}fieldset,img{border:0}body{font-size:14px;font-family:"Microsoft YaHei"}.clearfix:after{content:'';display:block;visibility:hidden;clear:both}
