--- a/src/css/SuperModalLayer.css
+++ b/src/css/SuperModalLayer.css
@@ -3,19 +3,41 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.super-modal{
+.super-modal-wrap{
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
-    opacity: .8;
-    z-index: 1000;
+    z-index: 9998;
     display: none;
 }
-
+.super-modal{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.8;
+    z-index: 9999;
+    display: none;
+    transition: all .8s;
+}
+.super-modal.addAmimal{
+    -webkit-animation: change .3s linear;
+    -moz-animation: change .3s linear;s
+    -o-animation: change .3s linear;
+    animation: change .3s linear;
+}
+@-webkit-keyframes change{
+    0% {opacity: 0; }
+    20% {opacity: 0.2; }
+    40% {opacity: 0.4;}
+    60% {opacity: 0.6; }
+    80% {opacity: 0.7; }
+    100% {opacity: 0.8; }
+}
 .super-inner{
     position: absolute;
     top: 50%;
@@ -23,11 +45,29 @@
     width: 400px;
     height: 240px;
     border-radius: 4px;
-    background-color: #fff;
+    background-color: #F7F7F7;
     transform: translate(-50%,-50%);
-    z-index: 1200;
+    z-index: 10000;
 }
-
+.super-inner.slideAmi{
+    -webkit-animation: change2 .4s linear;
+    -moz-animation: change2 .4s linear;s
+    -o-animation: change2 .4s linear;
+    animation: change2 .4s linear;
+}
+@-webkit-keyframes change2{
+    0% {top: -50%; }
+    10% {top: -40%; }
+    20% {top: -30%; }
+    30% {top: -20%; }
+    40% {top: -10%;}
+    50% {top: 0%; }
+    60% {top: 10%; }
+    70% {top: 25%; }
+    80% {top: 35%; }
+    90% {top: 45%; }
+    100% {top: 50%;}
+}
 .super-inner h2{
     text-align: center;
     margin: 20px 0 15px;
