--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,9 +9,15 @@ html,body{
     margin: 0;
     padding:0;
 }
-.container{
+body{
+
     width: 100%;
     height: 100%;
+}
+.container{
+    width: 100%;
+    background: url('../img/27.jpg') no-repeat;
+    background-size: cover;
 }
 .header{
     height: 80px;
@@ -35,7 +41,7 @@ html,body{
 }
 .main-demo{
     width: 1128px;
-    margin: 20px auto;
+    margin: 20px auto 0;
 }
 .main-demo ul{
     list-style: none;
