--- a/src/css/index.css
+++ b/src/css/index.css
@@ -80,6 +80,9 @@ body{
     display: block;
 }
 @media screen and (max-width: 1080px) {
+    .container{
+        height: 100%;
+    }
     .header{
         font-size: 18px;
         width: 100%;
