--- a/src/css/SuperModalLayer.css
+++ b/src/css/SuperModalLayer.css
@@ -18,7 +18,7 @@
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #4d4c4c;
     opacity: 0.8;
     z-index: 9999;
     display: none;
@@ -68,9 +68,9 @@
     90% {top: 45%; opacity: 0.95;}
     100% {top: 50%;opacity: 1;}
 }
-.super-inner h2{
+.super-inner .super-title{
     text-align: center;
-    margin: 20px 0 15px;
+    margin: 25px 0 15px;
 }
 
 .super-btn{
@@ -101,8 +101,8 @@
         position: absolute;
         top: 50%;
         left:50%;
-        width: 90%;
-        height: 200px;
+        width: 75%;
+        height: 150px;
         background-color: #fff;
         transform: translate(-50%,-50%);
     }
@@ -110,12 +110,12 @@
         position: absolute;
         bottom:30px;
         display: inline-block;
-        width: 80px;
-        height: 40px;
+        width: 70px;
+        height: 35px;
         border-radius: 6px;
         color: #fff;
         text-align: center;
-        line-height: 40px;
+        line-height: 35px;
         cursor: pointer;
     }
     .super-btnCancel{
